Windows compatibility: a URL path is not an OS path, and a walked path carries the platform separator
Two idioms, eighteen red tests on Windows — one of them a PRODUCTION
bug rather than a test bug.

URL path -> OS path. DuckDb.sourceUrl read java.net.URI.getPath(),
which is a URL path: on Windows a file: URL spells "/D:/dir/f.json"
and no reader opens the leading-slash form (15 JsonM2MChain FileSource
errors). Path.of(URI) is the JDK's own conversion; the separator then
goes FORWARD, because DuckDB's readers GLOB and the backslash is the
glob ESCAPE character. A malformed file: URL now names itself
(IllegalStateException) instead of surfacing an NPE out of stringLit.
StressDomainTest carried the same idiom on the test side
(Path.of(url.getPath()) -> InvalidPath).

Separator-blind scope matching — the more dangerous half, because it
fails SILENT. Files.walk yields the platform separator while every
scope predicate and register key in the guards is spelled '/':
CarrierPurityRatchetTest matched none of "/lowering/", "/resolver/",
"/plan/" and scanned ZERO of its 74 files; PlatformSurfaceGuardrailTest's
whitelist lookup missed com/legend/builtin/Pure.java and reported its
own bootstrap entry as drift. The first was caught only because
GuardCoverage's floor exists — exactly the compliance-theater failure
mode audit item 7 built it for (a ratchet scanning nothing passes
every pin).

NO pin, floor, allowlist entry, or register row moved. The walks were
re-pointed, which is what CarrierPurityRatchetTest's own message
instructs; with the guard scanning its files again, every carrier pin
still measures exactly at its ceiling.

Hardened the same idiom where it was latent rather than red:
SqlTextRatchetTest, ParserBoundaryArchTest and NoEagerTypeReferencesTest
trade their hardcoded separator literals for the per-Path separator
(which also survives a zip/jar FileSystem), and RelationalCorpusRunner's
cand.split("/") — dormant only because the legend-engine corpus is not
checked 